@@ -10,89 +10,92 @@ use Catmandu;
 use Catmandu::Util qw(data_at);
 use namespace::clean;
 
-#use Data::Dumper qw(Dumper);
-
-##
-# Loads the correct fixer based on a condition.
-# Note that the FIX module is loaded separately for _every_ import run.
-##
-
 has options         => (is => 'ro', required => 1);
-has item            => (is => 'ro', required => 1);
-has item_number     => (is => 'ro', required => 1);
+has fixers => (is => 'ro', is => 'lazy');
 
+sub _build_fixers {
+    my ($self, $args) = @_;
+    my $fixers;
+    my $fix_file_name;
 
-has condition  => (is => 'lazy');
-has fix_module => (is => 'lazy');
-
-sub _build_fix_module {
-    my $self = shift;
-    ##
-    # We can have two options: either we have a condition
-    # option _and_ a list of potential fixers in the plugin_fixer_Fix
-    # block; or we haven't.
-    #
-    # In the first case, we need to load the correct file name of
-    # the fix file from the config block for one of the potential
-    # fixers. We select the fix based on a condition.
-    #
-    # In the second case, get the filename from the plugin_fixer_Fix
-    # block.
-    #
-    # We return the Datahub::Factory->fixer with the correct filename already
-    # loaded.
-    ##
     if (!defined($self->options->{sprintf('fixer_%s', $self->options->{'fixer'})}->{'condition'})) {
-        return Datahub::Factory->fixer($self->options->{'fixer'})->new(
-            'file_name' => $self->options->{sprintf('fixer_%s', $self->options->{'fixer'})}->{'file_name'}
+        $fix_file_name = $self->options->{sprintf('fixer_%s', $self->options->{'fixer'})}->{'file_name'};
+
+        $fixers->{'default'} = Datahub::Factory->fixer($self->options->{'fixer'})->new(
+            'file_name' => $fix_file_name
         );
+
+        return $fixers;
     }
 
-    # If fixers is empty, throw a tantrum
+    # @todo
+    #   Move this to PipeLineConfig.pm
     if (
         !defined($self->options->{sprintf('fixer_%s', $self->options->{'fixer'})}->{'fixers'}) ||
         scalar @{$self->options->{sprintf('fixer_%s', $self->options->{'fixer'})}->{'fixers'}} == 0
         ) {
-            Catmandu::BadArg->throw(
-                'message' => sprintf('Missing or empty "fixers" option in [plugin_fixer_%s]', $self->options->{'fixer'})
-            );
-        }
-
-    # Loop over all possible fixers
-    my $fix_file_name;
-    foreach my $fixer (@{$self->options->{sprintf('fixer_%s', $self->options->{'fixer'})}->{'fixers'}}) {
-        # If the condition is empty, throw a tantrum
-        if (!defined($self->options->{sprintf('fixer_%s', $fixer)}->{'condition'})) {
-            Catmandu::BadArg->throw(
-                'message' => sprintf('Missing "condition" option in [plugin_fixer_%s]', $fixer)
-            );
-        }
-        if ($self->options->{sprintf('fixer_%s', $fixer)}->{'condition'} eq $self->condition) {
-            $fix_file_name = $self->options->{sprintf('fixer_%s', $fixer)}->{'file_name'};
-            # Guard against missing file_name option in configuration file
-            if (!defined($fix_file_name) || $fix_file_name eq '') {
-                Catmandu::BadArg->throw(
-                    'message' => sprintf('Missing "file_name" option in [plugin_fixer_%s]', $fixer)
-                );
-            }
-            last;
-        }
-    }
-
-    if (!defined($fix_file_name) || $fix_file_name eq '') {
-        Catmandu::BadVal->throw(
-            'message' => sprintf('Condition "%s" of item "%s" did not appear in any of the fixers.', $self->condition, $self->item_number)
+        Catmandu::BadArg->throw(
+            'message' => sprintf('Missing or empty "fixers" option in [plugin_fixer_%s]', $self->options->{'fixer'})
         );
     }
 
-    return Datahub::Factory->fixer($self->options->{'fixer'})->new(
-        'file_name' => $fix_file_name
-    );
+    foreach my $fixer (@{$self->options->{sprintf('fixer_%s', $self->options->{'fixer'})}->{'fixers'}}) {
+        $fixer = sprintf('fixer_%s', $fixer);
+
+        # @todo
+        #   Move this to PipeLineConfig.pm
+        if (!defined($self->options->{$fixer}->{'condition'})) {
+            Catmandu::BadArg->throw(
+                'message' => sprintf('Missing "condition" option in [plugin_%s]', $fixer)
+            );
+        }
+
+        $fix_file_name = $self->options->{$fixer}->{'file_name'};
+
+        # @todo
+        #   Move this to PipeLineConfig.pm
+        if (!defined($fix_file_name) || $fix_file_name eq '') {
+            Catmandu::BadArg->throw(
+                'message' => sprintf('Missing "file_name" option in [plugin_%s]', $fixer)
+            );
+        }
+
+        $fixers->{$fixer} = Datahub::Factory->fixer($self->options->{'fixer'})->new(
+           'file_name' => $fix_file_name
+        );
+    }
+
+    return $fixers;
 }
 
-sub _build_condition {
-    my $self = shift;
-    return data_at($self->options->{sprintf('fixer_%s', $self->options->{'fixer'})}->{'condition'}, $self->item);
+sub fix_module {
+    my ($self, $item) = @_;
+
+    if (defined($self->fixers->{'default'})) {
+        return $self->fixers->{'default'};
+    }
+
+    my $condition = data_at($self->options->{sprintf('fixer_%s', $self->options->{'fixer'})}->{'condition'}, $item);
+
+    foreach my $fixer (@{$self->options->{sprintf('fixer_%s', $self->options->{'fixer'})}->{'fixers'}}) {
+        # @todo
+        #   Move this to PipeLineConfig.pm
+        if (!defined($self->options->{$fixer}->{'condition'})) {
+            Catmandu::BadArg->throw(
+                'message' => sprintf('Missing "condition" option in [plugin_%s]', $fixer)
+            );
+        }
+
+        if ($self->options->{sprintf('%s', $fixer)}->{'condition'} eq $condition) {
+            return $self->fixers->{$fixer};
+        }
+    }
+
+    # @todo
+    #   return false or throw an exception
 }
 
 1;
+
+__END__
+
